--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       Case Problem 3
 
       CSS Demo Form
-      Author: 
+      Author: Nathaniel Aufdenberg, Nolan Bell, Thomas Lowe
       Date:   
 
       Filename:   wm_demo.html
