--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
    
    <meta charset="utf-8" />
       <title>CSS Styles Demo</title>
-      <link href="../Styles/wm_reset.css" rel="stylesheet" />      
-      <link href="../Styles/wm_styles.css" rel="stylesheet" />   
-      <link href="../Styles/wm_forms.css" rel="stylesheet" />
+      <link href="/Styles/wm_reset.css" rel="stylesheet" />      
+      <link href="/Styles/wm_styles.css" rel="stylesheet" />   
+      <link href="/Styles/wm_forms.css" rel="stylesheet" />
       <script src="/wm_script.js"></script>
    </head>
 
@@ -26,7 +26,7 @@
    <body>
 
       <header>
-         <img src="../Imgs/wm_logo.png" alt="WidgetMage" />
+         <img src="/Imgs/wm_logo.png" alt="WidgetMage" />
          <nav class="horizontal">
             <ul>
                <li><a href="#">Home</a></li>
