--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <fieldset>
                <legend>Fonts</legend>
                <label for="fontfamily">Font Family</label>
-               <select name="fontfamily" id="fontfamily">
+               <select name="fontFamily" id="fontfamily">
                   <!--The fonts, courtesy of Thomas Lowe-->
                   <optgroup label="generic">
                      <option value="default">default</option>
@@ -125,7 +125,7 @@
                </select>
                <!-- To Transfer the text and capitalize and lowercase letters in the section of the paragraph on our website- Nolan Bell-->
                <label for="texttransform">Text Transform</label>
-               <select name="texttransformation" id="texttransformation">
+               <select name="texttransform" id="texttransform">
                   <option value="none">none</option>
                   <option value="capitalize">capitalize</option>
                   <option value="lowercase">lowercase</option>
@@ -186,7 +186,7 @@
                <label for="textindent">Text Indent</label>
                <div class="slider">
                    0
-                   <input type="range" name="textindent" id="textindent" min="0" max="10"step="1" value="0"  />
+                   <input type="range" name="textindent" id="textindent" min="0" max="10" step="1" value="0"  />
                    10
                </div>
                <!--Nate-->
